// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms|ExpandableText Expanded 1`] = `
<ExpandableText
  expand={true}
>
  <div
    className="expandable-text undefined"
  >
    <Markdown
      options={
        Object {
          "disableParsingRawHTML": true,
          "namedCodesToUnicode": Object {
            "amp": "&",
            "apos": "'",
            "gt": ">",
            "lt": "<",
            "nbsp": " ",
            "quot": "“",
          },
          "overrides": Object {},
          "slugify": [Function],
        }
      }
    >
      <span
        key="outer"
      >
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been   the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley   of type and scrambled it to make a type specimen book. It has survived not only five centuries,   but also the leap into electronic typesetting, remaining essentially unchanged. It was   popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,   and more recently with desktop publishing software like Aldus PageMaker including versions of   Lorem Ipsum.
      </span>
    </Markdown>
    <span
      className="button-toggle"
      onClick={[Function]}
    >
      Less
    </span>
  </div>
</ExpandableText>
`;

exports[`Storyshots Atoms|ExpandableText No Expansion 1`] = `
<ExpandableText>
  <div
    className="expandable-text undefined"
  >
    <Markdown
      options={
        Object {
          "disableParsingRawHTML": true,
          "namedCodesToUnicode": Object {
            "amp": "&",
            "apos": "'",
            "gt": ">",
            "lt": "<",
            "nbsp": " ",
            "quot": "“",
          },
          "overrides": Object {},
          "slugify": [Function],
        }
      }
    >
      <span
        key="outer"
      >
        Short text
      </span>
    </Markdown>
  </div>
</ExpandableText>
`;

exports[`Storyshots Atoms|ExpandableText Standard 1`] = `
<ExpandableText>
  <div
    className="expandable-text undefined"
  >
    <Markdown
      options={
        Object {
          "disableParsingRawHTML": true,
          "namedCodesToUnicode": Object {
            "amp": "&",
            "apos": "'",
            "gt": ">",
            "lt": "<",
            "nbsp": " ",
            "quot": "“",
          },
          "overrides": Object {},
          "slugify": [Function],
        }
      }
    >
      <span
        key="outer"
      >
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been   the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley   of type and scrambled it to make a type specimen book. It has survived not only five centuries,   but also the leap into electronic typesetting, remaining...
      </span>
    </Markdown>
    <span
      className="button-toggle"
      onClick={[Function]}
    >
      More
    </span>
  </div>
</ExpandableText>
`;
